further progress on site build

--- a/src/styles/headings.css
+++ b/src/styles/headings.css
@@ -1,6 +1,6 @@
 h1 {
   color: #e86025;
-  font: 5.5rem/1.15 "Rubik", sans-serif;
+  font: 5.5rem/1.15 "Hind", sans-serif;
   text-transform: uppercase; }
   h1 span {
     color: #272727; }
@@ -10,7 +10,7 @@ h1 {
 
 h2 {
   color: #EFF1F3;
-  font: 1.75rem/1 "Rubik", sans-serif;
+  font: 1.75rem/1 "Hind", sans-serif;
   text-transform: uppercase; }
   h2 span {
     color: #272727; }
