--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,6 @@ $secondaryColor: #e86025;
 $tertiaryColor: #EFF1F3;
 $accentColor: #FED766;
 $primaryFont: 'Open Sans', sans-serif;
-$secondaryFont: 'Rubik', sans-serif;
+$secondaryFont: 'Hind', sans-serif;
 $hspace: 1rem;
 $vspace: 1rem;
